--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 /* reset básico */
-* { box-sizing: border-box; margin: 0; padding: 0; }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
 }
 
