ADD: visuais novos

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: white;
+    background-color: #ffffffda;
+    
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+
     color: black;
     position: sticky;
     top: 0;
