--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -22,7 +22,14 @@ main {
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     width: 400px;
-    text-align: center;
+}
+
+/*
+ * Por obséquio revisor de código que futuramente lerá a minha mensagem deixada com todo o esmero
+ * decida manter ou remover a logo.
+*/
+.logo {
+  /*  display: none;*/
 }
 
 .logo img {
@@ -35,18 +42,18 @@ main {
 }
 
 h2 {
-    font-size: 25px;
+    font-size: 2rem;
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 1.2rem;
     color: #333;
     margin-bottom: 5px;
 }
 
 p {
     color: #666;
-    font-size: 14px;
+    font-size: 0.6rem;
     margin-bottom: 20px;
 }
 
