--- a/src/components/Forms/Register/Register.css
+++ b/src/components/Forms/Register/Register.css
@@ -1,8 +1,10 @@
 .form-container {
     width: 100%;
     max-width: 400px;
+    
 
     padding: 20px;
+    margin: 15px auto;
 
     display: flex;
     flex-direction: column;
