--- a/src/components/Label/Label-Icon/LabelIcon.css
+++ b/src/components/Label/Label-Icon/LabelIcon.css
@@ -1,21 +1,28 @@
-.label-icon {
+.label-container {
     display: flex;
-    align-items: center;
-
-    
 }
 
-.label-icon-texts {
+.label-texts-container {
     display: flex;
     flex-direction: column;
     margin-left: 1rem;
+    justify-content: center;
+    flex: 1;
 }
 
-.label-icon-subtext {
+.label-subtext {
     font-size: 12px;
     color: #666;
 }
 
-.label-icon-text {
+.label-text {
     font-size: 14px;
+}
+
+.label-div {
+    width: 5px;
+
+    background-color: #2bb673;
+
+    border-radius: 5px;
 }
