--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -19,4 +19,14 @@
         font-size: clamp(1rem, 1.5rem, 2.5rem);
         font-weight: 700;
     }
+
+    .tags-profile {
+        display: inline-block;
+        background-color: #eee;
+        color: #333;
+        padding: 2px 10px;
+        margin: 10px 10px 0 0;
+        border-radius: 0.5rem;
+        font-size: 14px;
+    }
 }
