--- a/src/components/Forms/Contato/Contato.css
+++ b/src/components/Forms/Contato/Contato.css
@@ -4,3 +4,12 @@
     gap: 1rem;
 }
 
+.input-row {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+  }
+  
+  .input-row .input {
+    flex: 1;
+  }
