--- a/src/components/Inputs/Input/Input.css
+++ b/src/components/Inputs/Input/Input.css
@@ -28,7 +28,7 @@ textarea {
 
     gap: 1rem;
 
-    padding: 15px;
+    padding: 12px 15px;
 
     background-color: #fff;
 }
@@ -49,7 +49,7 @@ textarea {
 }
 
 .text-area-field {
-    padding: 15px;
+    padding: 10px 15px;
     min-height: 100px;
 
     resize: vertical;
