--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -4,7 +4,7 @@
 
     padding: 12px;;
 
-    font-size: 16px;
+    font-size: clamp(14px, 1rem, 1.5rem);
     font-weight: bold;
     
     border: none;
@@ -26,7 +26,7 @@
     padding: 12px;
     
     color: #333;
-    font-size: 14px;
+    font-size: clamp(12px, 0.8rem, 1rem);
     font-weight: bold;
 
     border: 1px solid #ddd;
