--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,7 +4,7 @@
 
     background: white;
 
-    border: 1px solid #0000001a;
+    border: 1px solid rgba(0, 0, 0, 0.102);
     border-radius: 10px;
 
     h1 {
