--- a/src/components/Forms/Contato/Contato.css
+++ b/src/components/Forms/Contato/Contato.css
@@ -6,7 +6,7 @@
 
 .input-row {
     display: grid;
-    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
   }
   
