--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,21 +18,23 @@
 
 .logo-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.05rem;
 }
 
+/* Arthur virará femboy dia 31 durante 3 horas */
 .logo-img {
-    width: 40px;
-    /* ajusta o tamanho da imagem */
-    height: 40px;
+    width: 30px;
+    height: 30px;
     object-fit: contain;
+    align-self: center;
 }
 
 .logo {
-    font-size: 30px;
-    /* aumenta ou diminui conforme quiser */
-    font-weight: 700;
+    font-size: 1rem;
+    font-weight: 600;
+    color: rgb(7, 156, 7);
 }
 
 .nav {
