ADD: Logica do Carrinho de Compras

--- a/src/components/ListaItens/ListaItens.css
+++ b/src/components/ListaItens/ListaItens.css
@@ -66,10 +66,13 @@
             border-radius: 6px;
             color: #333;
 
-            &:hover {
+            &:hover,
+            &:active {
                 background-color: #eee;
                 cursor: pointer;
             }
+
+            
         }
     }
 }
