--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -34,3 +34,13 @@
         justify-content: space-between;
         margin-bottom: 1rem;
 }
+
+
+.container-empty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 15px;
+}
