--- a/src/components/Sections/Hero/HeroSection.css
+++ b/src/components/Sections/Hero/HeroSection.css
@@ -1,10 +1,9 @@
 .hero-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 3rem 2rem;
   background-color: white;
-  gap: 2rem;
   flex-wrap: wrap; /* para ficar responsivo */
 }
 
@@ -29,13 +28,13 @@
 }
 
 .hero-image {
-  flex: 1 1 300px;
+  flex: 0 1 600px;
   display: flex;
-  justify-content: flex-end;
+
 }
 
 .hero-image img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  aspect-ratio: 16/9;
   border-radius: 10px;
 }
