--- a/src/components/Sections/Hero/HeroSection.css
+++ b/src/components/Sections/Hero/HeroSection.css
@@ -13,7 +13,7 @@
 }
 
 .hero-title {
-  font-size: 40px;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 1rem;
@@ -28,13 +28,21 @@
 }
 
 .hero-image {
+  margin-top: 2rem;
   flex: 0 1 600px;
   display: flex;
-
 }
 
 .hero-image img {
   width: 100%;
   aspect-ratio: 16/9;
   border-radius: 10px;
+  filter:blur(0.7px);
+}
+
+@media (max-width: 720px) {
+  .hero-section {
+    padding: 1.2rem 2rem;
+    padding-bottom: 3rem;
+  }
 }
