--- a/src/components/Inputs/Input/Input.css
+++ b/src/components/Inputs/Input/Input.css
@@ -5,9 +5,6 @@ input, textarea {
     text-overflow: ellipsis;
 }
 
-textarea {
-    resize: both;
-}
 
 
 .container-input {
@@ -59,7 +56,7 @@ textarea {
 
 .text-area-field {
     padding: 10px 15px;
-    /*min-height: 100px;*/
+    min-height: 100px;
 
-    resize: both;
+    resize: vertical;
 }
