--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,18 @@
   color: #888;
   font-size: 0.9rem;
 }
+
+
+
+
+.title-section  {
+  font-size: 40px;
+  flex: 1;
+  margin-bottom: 10px;
+}
+
+.subtitle-section {
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 3rem;
+}
