--- a/src/components/OurImpact/OurImpact.css
+++ b/src/components/OurImpact/OurImpact.css
@@ -14,19 +14,7 @@
     flex: 1 1 300px;
 }
 
-.impact-text h2 {
-    font-size: 1.8rem;
-    font-weight: 700;
-    line-height: 1.3;
-    margin-bottom: 1rem;
-    color: black;
-}
 
-.impact-text p {
-    font-size: 1.1rem;
-    color: #555;
-    line-height: 1.5;
-}
 
 /* CARDS */
 .impact-cards {
@@ -37,7 +25,7 @@
 }
 
 .card {
-    background: #fcfcfc;
+    background-color: #fff;
     padding: 1.2rem;
     border-radius: 10px;
     text-align: center;
@@ -47,6 +35,14 @@
     justify-content: center;
     align-items: center;
     gap: .4rem;
+    transition: all 0.3s ease;
+    border: 1px solid #079c07;
+
+    &:hover, &:focus, &:active {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transform: translateY(-2px);
+        background-color: #fcfcfc;;
+    }
 }
 
 .card strong {
