--- a/src/pages/Dashboard-Admin/Dashboard-Admin.css
+++ b/src/pages/Dashboard-Admin/Dashboard-Admin.css
@@ -1,25 +1,24 @@
 .ul-tabs {
     list-style: none;
     padding: 0;
-    gap: 0.5rem; 
+    
     display: flex;
     flex-direction: column;
     width: 100%; 
 
-    margin-top: 10px;
-
     li {
         width: 100%;
-
     }
-
-
+    
+    
     label {
-        display: block;
+        display: flex;
         width: 100%;
         padding: 10px 12px;
         font-weight: 500;
-        color: #444; 
+        color: #444;
+        align-items: center; 
+        gap: 0.5rem;
         
         cursor: pointer;
         transition: background-color 0.2s ease, color 0.2s ease;
