--- a/src/pages/Dashboard-Admin/Tabs/Tab-Ongs/Tab-Ongs.css
+++ b/src/pages/Dashboard-Admin/Tabs/Tab-Ongs/Tab-Ongs.css
@@ -1,4 +1,4 @@
-.container-cards {
+/* .container-cards {
     display: grid;
     grid-template-columns: repeat(4, minmax(250px, 1fr));
     gap: 10px;
@@ -18,10 +18,28 @@
         }
     }
 
-}
+} */
 
 .container-ongs {
     display: flex;
     flex-flow: row wrap;
     gap: 10px;
+}
+
+.container-filters {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
+    align-items: center ;
+
+    div:last-child {
+        flex: 1;
+    }
+}
+
+
+.filter-status-ongs {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
