--- a/src/components/OngRequestCard/OngRequestCard.css
+++ b/src/components/OngRequestCard/OngRequestCard.css
@@ -27,12 +27,25 @@
         top: 16px;
         right: 16px;
 
-        background-color: #F5F5F5;
         border-radius: 4px;
-
+        
         font-size: 12px;
         font-weight: 600;
+    }
+    
+    .badge-pendente {
+        background-color: #F5F5F5;
         color: #333333;
+    }
+
+    .badge-aprovada {
+        background-color: #E5FFEB;
+        color: #2BB673;
+    }
+
+    .badge-rejeitada {
+        background-color: #FFE5E5;
+        color: #FF4D4D;
     }
 
 
