--- a/src/components/Sections/Hero/HeroSection.css
+++ b/src/components/Sections/Hero/HeroSection.css
@@ -5,15 +5,15 @@
   padding: 3rem 2rem;
   background-color: white;
   flex-wrap: wrap; /* para ficar responsivo */
+  gap: 20px;
 }
 
 .hero-text {
-  max-width: 600px;
-  flex: 1 1 300px; /* cresce e encolhe conforme a tela */
+  flex: 1;
 }
 
 .hero-title {
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 1rem;
@@ -23,7 +23,7 @@
 .hero-subtitle {
   font-size: 1.1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.8;
   color: #555;
 }
 
@@ -38,6 +38,14 @@
   aspect-ratio: 16/9;
   border-radius: 10px;
   filter:blur(0.7px);
+}
+
+.container-buttons-hero {
+  margin-top: 20px;
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 @media (max-width: 720px) {
