--- a/src/components/OurImpact/OurImpact.css
+++ b/src/components/OurImpact/OurImpact.css
@@ -12,6 +12,7 @@
 .impact-text {
     max-width: 600px;
     flex: 1 1 300px;
+    
 }
 
 
@@ -25,38 +26,48 @@
 }
 
 .card {
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 1.2rem;
     border-radius: 10px;
-    text-align: center;
+    
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: .4rem;
+    align-items: start;
+    gap: 10px;
     transition: all 0.3s ease;
-    border: 1px solid #079c07;
+    border: 1px solid #eee;
 
     &:hover, &:focus, &:active {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transform: translateY(-2px);
-        background-color: #fcfcfc;;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    div {
+        padding: 10px;
+
+        border-radius: 5px;
+
+        background-color: #84fa842f;
+
+        svg {
+            color: #079c07;
+            font-size: 1.2rem;
+        }
+    }
+
+    span:nth-of-type(1) {
+        font-weight: 700;
+        font-size: 1rem;
+    }
+
+    span:nth-of-type(2) {
+        font-weight: 400;
+        color: #666666;
+        font-size: 0.8rem;
     }
 }
 
-.card strong {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #079c07;
-    line-height: 1;
-}
 
-.card span {
-    font-size: 1rem;
-    color: #333;
-    line-height: 1.3;
-}
 
 /* IMAGEM PRINCIPAL */
 .impact-media {
