--- a/src/components/OngRequestCard/OngRequestCard.css
+++ b/src/components/OngRequestCard/OngRequestCard.css
@@ -28,11 +28,11 @@
         right: 16px;
 
         border-radius: 4px;
-        
+
         font-size: 12px;
         font-weight: 600;
     }
-    
+
     .badge-pendente {
         background-color: #F5F5F5;
         color: #333333;
@@ -54,7 +54,7 @@
         height: 80px;
         overflow: hidden;
         text-overflow: ellipsis;
-        
+
 
         p:first-child {
             font-weight: 600;
@@ -82,11 +82,21 @@
         .row-info {
             display: flex;
             flex-direction: row;
-            align-items: center;
-            gap: 8px;
 
+            align-items: flex-start;
+
+            gap: 8px;
             font-size: 14px;
             color: #5c5c5c;
+
+            word-break: break-word;
+            overflow-wrap: anywhere;
+
+
+            svg, i {
+                margin-top: 3px;
+                flex-shrink: 0; /* Garante que o ícone não seja esmagado */
+            }
         }
     }
 
@@ -98,7 +108,7 @@
         flex-wrap: wrap;
         gap: 10px;
 
-        
+
 
         .btn-documents, .btn-reject, .btn-approve {
             all: unset;
@@ -112,7 +122,7 @@
 
             border: 1px solid rgb(0, 0, 0, 0.2);
             border-radius: 4px;
-            
+
             cursor: pointer;
 
             transition: 0.5s;
@@ -158,7 +168,7 @@
         @media (max-width: 600px) {
             .btn-reject,
             .btn-approve {
-                flex-basis: 100%; 
+                flex-basis: 100%;
             }
         }
     }
