--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -190,6 +190,7 @@
     display: block;
     width: 100%;
     text-align: center;
+    justify-content: center;
     padding: 1rem 1.5rem;
     font-size: 1rem;
     font-weight: 500;
