--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -283,6 +283,8 @@
   text-align: left;
 }
 
+
+
 .dropdown-item:hover {
   background-color: #f5f5f5;
   color: #000;
@@ -298,11 +300,15 @@
   border: 0;
   height: 1px;
   background: #e5e5e5;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 0;
 }
 
 .logout-item {
   color: #d32f2f;
+
+  svg {
+    color: #d32f2f;
+  }
 }
 
 .logout-item:hover {
