--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -15,7 +15,7 @@
 
 
 
-.btn-primary:hover {
+.btn-primary:hover:active {
     background: #25a15e;
     cursor: pointer;
 }
@@ -35,7 +35,7 @@
     transition: background-color 0.3s;
 }
 
-.btn-secondary:hover {
+.btn-secondary:hover:active {
     background: #eee;
     cursor: pointer;
 }
